--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -14,6 +14,7 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mflx": "^1.2.1",
     "puppeteer": "^21.0.3"
