--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -14,9 +14,11 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
+    "@svelte-plugins/tooltips": "^0.1.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mflx": "^1.2.1",
-    "puppeteer": "^21.0.3"
+    "puppeteer": "^21.0.3",
+    "vite-express": "^0.9.2"
   }
 }
