--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -10,15 +10,20 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
+    "eslint": "^8.48.0",
+    "eslint-plugin-svelte": "^2.33.0",
     "svelte": "^4.0.5",
     "vite": "^4.4.5"
   },
   "dependencies": {
-    "@svelte-plugins/tooltips": "^0.1.6",
+    "chart.js": "^4.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mflx": "^1.2.1",
+    "mongoose": "^7.4.5",
     "puppeteer": "^21.0.3",
+    "svelte-chartjs": "^3.1.2",
     "vite-express": "^0.9.2"
   }
 }
